ログイン前後で表示の分岐、sessionのcreateアクション追加

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,4 +8,16 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = yield
+    div.navbar.navbar-expand-md.navbar-light.bg-light
+      div.navbar-brand Instaclone
+      ul.div.navbar-nav.mr-auto
+        - if logged_in?
+          li.div.nav-item = link_to "Profile", user_path(current_user.id), class: 'nav-link'
+          li.div.nav-item = link_to "Logout", session_path(current_user.id), method: :delete, class: 'nav-link'
+        - else
+          li.div.nav-item = link_to "Sign Up", new_user_path, class: 'nav-link'
+          li.div.nav-item = link_to "Log in", new_session_path, class: 'nav-link'
+    div.container-fluid
+      - flash.each do |key, value|
+        div.alert.alert-success = content_tag(:div, value, class: "#{key}")
+      = yield
