--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -3,4 +3,7 @@ h1
 p
   | メールアドレス: #{@user.email}
 
+- if @user.id == current_user.id
+  = link_to 'edit', edit_user_path(@user.id), data: { confirm: 'Are you sure you want to edit it?' }, class: 'btn btn-info'
+
 / = link_to 'ブログ一覧画面', blogs_path
