--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,7 +1,7 @@
 h1
-  | #{@user.name} のページ
+  | #{@user.name} 
 
-  p = image_tag @user.image.url
+  p = image_tag @user.image.profile.url
 
 - if @user.id == current_user.id
   p
