--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,7 +1,8 @@
 h1
   | #{@user.name} 
 
-  p = image_tag @user.image.profile.url
+  - if @user.image.url.present?
+    p = image_tag @user.image.profile.url
 
 - if @user.id == current_user.id
   p
