--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -9,6 +9,7 @@ h1
     | メールアドレス: #{@user.email}
 
   = link_to 'edit', edit_user_path(@user.id), data: { confirm: 'Are you sure you want to edit it?' }, class: 'btn btn-info'
+  = link_to 'my favorites', my_favorite_user_path(@user.id), class: 'btn btn-secondary ml-2'
 
 
 
