--- a/app/views/blogs/index.html.slim
+++ b/app/views/blogs/index.html.slim
@@ -18,7 +18,11 @@ table.table.table-hover
       td = blog.user.name
       td = image_tag(blog.image.url(:thumb))
       td = link_to '詳細を確認する', blog_path(blog.id)
-      td = link_to 'ブログを編集する', edit_blog_path(blog.id), data: { confirm: '本当に編集していいですか？' }
-      td = link_to 'ブログを削除する', blog_path(blog.id), method: :delete, data: { confirm: '本当に削除していいですか？' }
+      - if current_user.id == blog.user.id
+        td = link_to 'ブログを編集する', edit_blog_path(blog.id), data: { confirm: '本当に編集していいですか？' }
+        td = link_to 'ブログを削除する', blog_path(blog.id), method: :delete, data: { confirm: '本当に削除していいですか？' }
+      - else
+        td
+        td
 
 = link_to '新しくブログを投稿する', new_blog_path
