--- a/app/views/blogs/_form.html.slim
+++ b/app/views/blogs/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with(model: blog, local: true) do |f|
+= form_with(model: blog, local: true, url: choose_new_or_edit) do |f|
   - if blog.errors.any?
     div#error_explanation
       h2 #{blog.errors.count}件のエラーがあります。
