--- a/app/views/users/my_favorite.html.slim
+++ b/app/views/users/my_favorite.html.slim
@@ -14,7 +14,10 @@ table.table.table-hover
         td = blog.title
         td = blog.content
         td = blog.user.name
-        td = image_tag(blog.image.url(:thumb))
+        - if blog.image.present?
+          td = image_tag(blog.image.url(:thumb))
+        - else
+          td
         td = link_to '詳細を確認する', blog_path(blog.id)
       - @favorite.each do |favorite|
         td = link_to 'お気に入り解除する', favorite_path(id: favorite.id), method: :delete, class: 'btn btn-danger'
