--- a/app/views/blogs/index.html.slim
+++ b/app/views/blogs/index.html.slim
@@ -7,14 +7,18 @@ head
     .col-md-12
       - @blogs.each do |blog|
         .card.mb-5
-          h5.card-header = link_to "#{blog.title}", blog_path(blog.id)
+          h5.card-header = link_to "#{blog.title}", blog_path(blog.id), class: 'text-reset'
           - if blog.image.present?
             img.card-img-top src="#{blog.image.url}" /
           .card-body
             = blog.content
           - if current_user.id == blog.user.id
-            = link_to "#{edit_blog_path(blog.id)}", class: 'text-reset'
-              i.fas.fa-edit
+            / ボタンを横並びに
+            .d-flex
+              = link_to "#{edit_blog_path(blog.id)}", class: 'text-reset'
+                i.fas.fa-edit.fa-lg.ml-3
+              = link_to "#{blog_path(blog.id)}", method: :delete , class: 'text-reset'
+                i.fas.fa-trash.fa-lg.ml-2
             / btn.btn-danger.btn-sm = link_to "削除", "#{blog_path(blog.id)}", method: :delete, class: 'text-reset'
           .card-footer = link_to "#{blog.user.name}", user_path(blog.user.id)
 
