--- a/app/views/users/my_favorite.html.slim
+++ b/app/views/users/my_favorite.html.slim
@@ -1,4 +1,5 @@
 h1 お気に入り一覧
+
 table.table.table-hover
   thead.thead-default
     tr
@@ -9,15 +10,17 @@ table.table.table-hover
       th
       th
   tbody
+  - @my_favorite_blogs.each do |blog|
     tr
-      - @my_favorite_blogs.each do |blog|
-        td = blog.title
-        td = blog.content
-        td = blog.user.name
-        - if blog.image.present?
-          td = image_tag(blog.image.url(:thumb))
-        - else
-          td
-        td = link_to '詳細を確認する', blog_path(blog.id)
+      td = blog.title
+      td = blog.content
+      td = blog.user.name
+      - if blog.image.present?
+        td = image_tag(blog.image.url(:thumb))
+      - else
+        td
+      td = link_to '詳細を確認する', blog_path(blog.id)
       - @favorite.each do |favorite|
         td = link_to 'お気に入り解除する', favorite_path(id: favorite.id), method: :delete, class: 'btn btn-danger'
+
+= link_to 'TOP', blogs_path
