--- a/app/views/users/my_favorite.html.slim
+++ b/app/views/users/my_favorite.html.slim
@@ -20,7 +20,9 @@ table.table.table-hover
       - else
         td
       td = link_to '詳細を確認する', blog_path(blog.id)
-      - @favorite.each do |favorite|
-        td = link_to 'お気に入り解除する', favorite_path(id: favorite.id), method: :delete, class: 'btn btn-danger'
+      - blog.favorites.each do |blog_favorite|
+        - if blog_favorite.user_id == current_user.id
+          td = link_to 'お気に入り解除する', favorite_path(id: blog_favorite), method: :delete, class: 'btn btn-danger' 
+
 
 = link_to 'TOP', blogs_path
