お気に入りボタンをfont-awesomeに、アラートの色分け実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,18 @@
 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+
+.far.fa-heart{
+  color: darkgrey;
+  &:hover{
+    color: deeppink;
+  }
+}
+
+.fas.fa-heart{
+  color: deeppink;
+  &:hover{
+    color: darkgrey;
+    opacity: 0.5;
+  }
+}
