--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,5 +19,5 @@ html
           li.div.nav-item = link_to "Log in", new_session_path, class: 'nav-link'
     div.container-fluid
       - flash.each do |key, value|
-        div.alert.alert-success = content_tag(:div, value, class: "#{key}")
+        = content_tag(:p, value, class: "alert alert-#{key}")
       = yield
