ジャンボトロンでユーザープロフィールページ簡易実装

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,17 +1,29 @@
-h1
-  | #{@user.name} 
+.jumbotron.jumbotron-fluid
+  .container
+    h1.display-4h1 #{@user.name} 
+    p.lead
+  .container
+    - if @user.image.url.present?
+      p = image_tag @user.image.profile.url
 
-  - if @user.image.url.present?
-    p = image_tag @user.image.profile.url
+    - if @user.id == current_user.id
+      p
+        | メールアドレス: #{@user.email}
 
-- if @user.id == current_user.id
-  p
-    | メールアドレス: #{@user.email}
-
-  = link_to 'edit', edit_user_path(@user.id), data: { confirm: 'Are you sure you want to edit it?' }, class: 'btn btn-info'
-  = link_to 'my favorites', my_favorite_user_path(@user.id), class: 'btn btn-secondary ml-2'
+      = link_to 'edit', edit_user_path(@user.id), data: { confirm: 'Are you sure you want to edit it?' }, class: 'btn btn-info'
+      = link_to 'my favorites', my_favorite_user_path(@user.id), class: 'btn btn-secondary ml-2'
 
 
 
 
 / = link_to 'ブログ一覧画面', blogs_path
+
+/ .jumbotron.jumbotron-fluid
+/   .container
+/     h1.display-4 幅一杯にジャンボトロン
+/     p.lead これは親要素の全ての横方向の空白一杯に広がるように設定変更されたジャンボトロンです。
+/   /! /.container
+/ /! /.jumbotron
+/ .container
+/   | \...
+/ /! /.container
