--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,4 +1,10 @@
 .jumbotron.jumbotron-fluid
+  sass:
+    junbotron
+      background-image: url="#{@user.image.profile.url}"
+      background-size: cover
+      background-position: center 60%
+  - if @user.image.url.present?
   .container
     h1.display-4h1 #{@user.name} 
     p.lead
@@ -12,6 +18,7 @@
 
       = link_to 'edit', edit_user_path(@user.id), data: { confirm: 'Are you sure you want to edit it?' }, class: 'btn btn-info'
       = link_to 'my favorites', my_favorite_user_path(@user.id), class: 'btn btn-secondary ml-2'
+
 
 
 
