とりあえずエラーを回避するためコメントアウト

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,9 +1,9 @@
 .jumbotron.jumbotron-fluid
-  sass:
-    junbotron
-      background-image: url="#{@user.image.profile.url}"
-      background-size: cover
-      background-position: center 60%
+  / sass:
+  /   junbotron
+  /     background-image: url="#{@user.image.profile.url}"
+  /     background-size: cover
+  /     background-position: center 60%
   - if @user.image.url.present?
   .container
     h1.display-4h1 #{@user.name} 
