--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,9 +1,4 @@
 .jumbotron.jumbotron-fluid
-  / sass:
-  /   junbotron
-  /     background-image: url="#{@user.image.profile.url}"
-  /     background-size: cover
-  /     background-position: center 60%
   - if @user.image.url.present?
   .container
     h1.display-4h1 #{@user.name} 
@@ -19,9 +14,20 @@
       = link_to 'edit', edit_user_path(@user.id), data: { confirm: 'Are you sure you want to edit it?' }, class: 'btn btn-info'
       = link_to 'my favorites', my_favorite_user_path(@user.id), class: 'btn btn-secondary ml-2'
 
+sass:
+  h1
+    color: white
+  .jumbotron
+    background-image: url("/ELL85_kurisutarutenneseki20131118.jpg") 
+    / 試しにpublic下の画像を読み込んでいる
+    background-size: cover
+    background-position: center 60%
 
 
 
+/ assets/image下→だめ
+/ public下→OK
+/ 単純なスペルミスとクラス指定する際の.のつけ忘れ
 
 / = link_to 'ブログ一覧画面', blogs_path
 
@@ -34,3 +40,7 @@
 / .container
 /   | \...
 / /! /.container
+
+    / background-image: url("./ELL85_kurisutarutenneseki20131118.jpg")
+    / background-size: cover
+    / background-position: center 60%
