--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -9,14 +9,14 @@
 
     - if @user.id == current_user.id
       p
-        | メールアドレス: #{@user.email}
+        |Email : #{@user.email}
 
       = link_to 'edit', edit_user_path(@user.id), data: { confirm: 'Are you sure you want to edit it?' }, class: 'btn btn-info'
       = link_to 'my favorites', my_favorite_user_path(@user.id), class: 'btn btn-secondary ml-2'
 
 sass:
   h1
-    color: white
+    color: mediumaquamarine
   .jumbotron
     background-image: url(@user.image.url) 
     background-size: cover
