--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,7 @@ html
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    script src="https://kit.fontawesome.com/b4dcd746af.js" crossorigin="anonymous"
   body
     div.navbar.navbar-expand-md.navbar-light.bg-light
       div.navbar-brand = link_to "Instaclone", blogs_path, class: 'text-decoration-none text-reset'
@@ -17,6 +18,8 @@ html
           - if logged_in?
             li.div.nav-item = link_to "My Page", user_path(current_user.id), class: 'nav-link'
             li.div.nav-item = link_to "Logout", session_path(current_user.id), method: :delete, class: 'nav-link'
+            span.navbar-text.ml-auto = link_to new_blog_path, class: 'text-reset'
+              i.far.fa-file.fa-lg.ml-2.mt-1
           - else
             li.div.nav-item = link_to "Sign Up", new_user_path, class: 'nav-link'
             li.div.nav-item = link_to "Log in", new_session_path, class: 'nav-link'
