--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,11 +18,11 @@ html
           - if logged_in?
             li.div.nav-item = link_to "My Page", user_path(current_user.id), class: 'nav-link'
             li.div.nav-item = link_to "Logout", session_path(current_user.id), method: :delete, class: 'nav-link'
-            span.navbar-text.ml-auto = link_to new_blog_path, class: 'text-reset'
-              i.far.fa-file.fa-lg.ml-2.mt-1
           - else
             li.div.nav-item = link_to "Sign Up", new_user_path, class: 'nav-link'
             li.div.nav-item = link_to "Log in", new_session_path, class: 'nav-link'
+        span.ul.navbar-text = link_to new_blog_path, class: 'text-reset'
+          i.far.fa-file.fa-lg.ml-2.mt-1
     div.container-fluid
       - flash.each do |key, value|
         = content_tag(:p, value, class: "alert alert-#{key}")
