--- a/app/views/blogs/_form.html.slim
+++ b/app/views/blogs/_form.html.slim
@@ -17,5 +17,5 @@
     = image_tag(blog.image.url) if blog.image && blog.image.url
     = f.file_field :image, class: 'form-control-file'
     = f.hidden_field :image_cache
-  = f.submit
+  = f.submit('Send',class: 'btn btn-primary btn-lg my-2 mb-5 px-5')
 = link_to 'トップに戻る', blogs_path
